병원 처방 기록 쪽수 표 시 / 약국 버튼 수정
병원 처방 기록 쪽수 표 시 / 약국 버튼 수정

--- a/css/hospital/data-menu.css
+++ b/css/hospital/data-menu.css
@@ -575,5 +575,5 @@
 /* Daily 버튼 hover 효과 */
 .data-filter-btn[data-type="daily"]:hover .daily-icon,
 .data-filter-btn[data-type="daily"].active .daily-icon {
-    content: url('../image/history_hover.png');
+    content: url('../../image/history_hover.png');
 }
