inventory 메뉴 추가
inventory 메뉴 추가

--- a/css/pharmacy/sidebar1.css
+++ b/css/pharmacy/sidebar1.css
@@ -124,5 +124,11 @@
             height: 16px !important;
         }
 
+        /* Inventory 메뉴 아이콘 스타일 */
+        #inventory-menu .menu-icon {
+            width: 20px !important;
+            height: 22.7px !important;
+        }
+
         /*========================================================여기까지 사이드바1에 속하는 요소들들=========================================================*/
 
