topbar saarch bar 추가
topbar saarch bar 추가

--- a/css/pharmacy/common.css
+++ b/css/pharmacy/common.css
@@ -30,3 +30,44 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     width: calc(100%); /* 좌우 마진 각 10px 고려 */
 }
+
+.content-container.inventory-container {
+    background-color: white;
+    border-radius: 8px;
+    height: calc(100%); /* 상하 마진 각 10px 고려 */
+    position: relative;
+    display: none;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    width: calc(100%); /* 좌우 마진 각 10px 고려 */
+}
+
+.content-header {
+    height: 50px;
+    border-bottom: 1px solid hsl(0, 0%, 85%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    border-radius: 8px 8px 0 0;
+}
+
+.content-title {
+    font-size: 15px;
+    color: #333;
+    font-weight: bold;
+}
+
+.close-button {
+    padding: 15px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: rgb(110, 110, 124);
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    transition: color 0.3s ease;
+    box-sizing: border-box;
+}
