--- a/css/hospital/prescription.css
+++ b/css/hospital/prescription.css
@@ -85,6 +85,7 @@
         border-top: 1px solid #ccc;
         display: flex;
         flex-direction: column;
+        box-sizing: border-box; /* 테두리를 높이에 포함시켜 1px 차이 해결 */
     }
 
     .prescription-right-top-area {
@@ -113,7 +114,7 @@
     }
 
     .prescription-right-bottom-area {
-        height: 70%; 
+        height: calc(70% - 1px); 
         border-top: 1px solid #ccc;
         position: relative; /* 위치 지정을 위해 추가 */
     }
