--- a/css/hospital/prescription_canvas.css
+++ b/css/hospital/prescription_canvas.css
@@ -62,18 +62,17 @@
 }
 
 .chart-controls button {
-    padding: 5px 10px;
+    width: 20px;
+    height: 20px;
     border: none;
-    border-radius: 4px;
-    background-color: rgb(0, 102, 255);
-    color: white;
+    background: url('../../image/undo_black.png') no-repeat center;
+    background-size: 20px 20px;
     cursor: pointer;
-    font-size: 12px;
-    width: 60px;
+    padding: 0;
 }
 
 .chart-controls button:hover {
-    background-color: rgb(0, 82, 204);
+    background-image: url('../../image/undo.png');
 }
 
 /* New Chart 버튼 스타일 */
