--- a/css/hospital/prescription-payment.css
+++ b/css/hospital/prescription-payment.css
@@ -158,10 +158,11 @@
     background-color: #C00000;
     color: white;
     border: none;
+    width: 100px;
     padding: 8px 16px;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 12px;
     transition: background-color 0.3s ease, transform 0.1s ease;
 }
 
