--- a/css/hospital/registration.css
+++ b/css/hospital/registration.css
@@ -5,8 +5,8 @@
             background-color: rgb(0, 102, 255);
             color: white;
             border: none;
-            border-radius: 6px;
-            font-size: 14px;
+            border-radius: 20px;
+            font-size: 12px;
             cursor: pointer;
             transition: background-color 0.3s ease;
             height: 33px;
@@ -17,9 +17,9 @@
             gap: 10px;  /* 아이콘과 텍스트 사이 간격 */
         }
 
-        .register-btn img {
-            width: 20px;  /* 아이콘 크기 */
-            height: 20px;
+        .register-btn .plus-sign {
+            margin-left: 3px;
+            font-size: 20px;
         }
 
         .register-btn:hover {
